exam/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-frontend-deployment
  labels:
    app: my-frontend
    type: frontend
spec:
  template:
    metadata:
      name: my-frontend-pod
      labels:
        app: my-frontend
        type: frontend
    spec:
      containers:
        - name: my-frontend-container
          image: tadamczyk/frontend
  replicas: 3
  selector:
    matchLabels:
      app: my-frontend
      type: frontend
