exam/k8s/backend-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: my-backend-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 5000
      port: 5000
  selector:
    app: my-backend
    type: backend
